--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background: url(./assets/images/background.png) #193F6E no-repeat;
+    background-size: cover;
+
 }
 
 #canvas {
     border: 5px solid black;
-    background-color: rgb(42, 91, 131);
+    background-color: #193F6E;
     max-height: 100%;
     max-width: 100%;
     font-family: "Special Elite";
